--- a/.github/workflows/jd_818.yml
+++ b/.github/workflows/jd_818.yml
@@ -18,19 +18,18 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/lxk0301/scripts.git ~/scripts
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
       - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
           node-version: 10.x
       - name: npm install
         run: |
-          cd ~/scripts
           npm install
       - name: '运行 【手机狂欢城脚本】'
         run: |
-          cd ~/scripts
           node jd_818.js
         env:
           JD_COOKIE: ${{ secrets.JD_COOKIE }}
