--- a/.github/workflows/jd_pet.yml
+++ b/.github/workflows/jd_pet.yml
@@ -17,7 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
       - name: Use Node.js 10.x
         uses: actions/setup-node@v1
         with:
