--- a/.github/workflows/jd_818.yml
+++ b/.github/workflows/jd_818.yml
@@ -5,8 +5,8 @@ name: jd_818
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 1,4,7,10,12,16,22 * * *'
+  # schedule:
+  #   - cron: '0 1,4,7,10,12,16,22 * * *'
   watch:
     types: started
   repository_dispatch:
