--- a/.github/workflows/jd_redPacket.yml
+++ b/.github/workflows/jd_redPacket.yml
@@ -5,8 +5,8 @@ name: jd_redPacket
 
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 17 * * *'
+  # schedule:
+  #   - cron: '0 17 * * *'
   watch:
     types: started
   repository_dispatch:
