--- a/.github/workflows/jd_bean_change.yml
+++ b/.github/workflows/jd_bean_change.yml
@@ -11,6 +11,10 @@ on:
     types: started
   repository_dispatch:
     types: bean_change
+  push:
+    branches:
+      - master
+
 jobs:
   build:
 
