--- a/.github/workflows/jd_shop.yml
+++ b/.github/workflows/jd_shop.yml
@@ -11,6 +11,10 @@ on:
     types: started
   repository_dispatch:
     types: shop
+  push:
+    branches:
+      - master
+      
 jobs:
   build:
 
