--- a/.github/workflows/jd_club_lottery.yml
+++ b/.github/workflows/jd_club_lottery.yml
@@ -11,6 +11,9 @@ on:
     types: started
   repository_dispatch:
     types: club_lottery
+  push:
+    branches:
+      - master
 jobs:
   build:
 
