--- a/.github/workflows/jd_collectProduceScore.yml
+++ b/.github/workflows/jd_collectProduceScore.yml
@@ -11,6 +11,9 @@ on:
     types: started
   repository_dispatch:
     types: collectProduceScore
+  push:
+    branches:
+      - master
 jobs:
   build:
 
