--- a/.github/workflows/jd_joy_feedPets.yml
+++ b/.github/workflows/jd_joy_feedPets.yml
@@ -11,6 +11,10 @@ on:
     types: [started]
   repository_dispatch:
     types: joy_feedPets
+  push:
+    branches:
+      - master
+
 jobs:
   build:
 
