--- a/.github/workflows/jd_joy_reward.yml
+++ b/.github/workflows/jd_joy_reward.yml
@@ -11,6 +11,10 @@ on:
     types: started
   repository_dispatch:
     types: joy_reward
+  push:
+    branches:
+      - master
+
 jobs:
   build:
 
