--- a/.github/workflows/jd_unsubscribe.yml
+++ b/.github/workflows/jd_unsubscribe.yml
@@ -11,6 +11,9 @@ on:
         types: started
   repository_dispatch:
     types: unsubscribe
+  push:
+    branches:
+      - master
 jobs:
   build:
 
